--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,144 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/helloWorld"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="24sp"
+        android:textColor="@color/purple_700" />
+    <EditText
+        android:id="@+id/putSomeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintBottom_toTopOf="@+id/helloWorld"
+        app:layout_constraintRight_toLeftOf="@+id/helloWorld"
+        android:text="@string/Edit_text"
+        android:textSize="16sp"
+        android:textColor="@color/purple_500">
+    </EditText>
+
+    <Button
+        android:id="@+id/pushButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintBottom_toTopOf="@+id/helloWorld"
+        app:layout_constraintLeft_toRightOf="@+id/helloWorld">
+    </Button>
+
+    <LinearLayout
+        android:id="@+id/LinerLayout1"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintBottom_toTopOf="@+id/putSomeText">
+
+        <Button
+            android:id="@+id/someButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </Button>
+
+        <EditText
+            android:id="@+id/someEditText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Edit_text">
+        </EditText>
+
+        <TextView
+            android:id="@+id/someTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hello_geekbrains"/>
+        <Switch
+            android:id="@+id/SomeSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:ignore="UseSwitchCompatOrMaterialXml">
+        </Switch>
+
+        <CheckBox
+            android:id="@+id/SomeCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </CheckBox>
+
+        <ToggleButton
+            android:id="@+id/SomeToggleButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </ToggleButton>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/LinerLayout2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"
+        android:orientation="horizontal"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp">
+
+        <EditText
+            android:id="@+id/editText1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:text="@string/Edit_text"
+            android:textColor="@color/purple_700"
+            android:textSize="24sp">
+        </EditText>
+
+        <EditText
+            android:id="@+id/editText2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="phone">
+        </EditText>
+
+        <EditText
+            android:id="@+id/editText3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="number">
+        </EditText>
+
+        <EditText
+            android:id="@+id/editText4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress">
+        </EditText>
+
+        <EditText
+            android:id="@+id/editText5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword">
+        </EditText>
+
+        <EditText
+            android:id="@+id/editText6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName">
+        </EditText>
+
+    </LinearLayout>
+
+    <CalendarView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/LinerLayout1"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
